# FinSentAnalyzer

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-deploy.txt  requirements-full.txt  requirements.txt  test_output.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: app.py  shared.py
app/pages/: 1_Single_Analysis.py  2_Batch_Processing.py  3_Explainability.py  4_Word_Insights.py  5_Deep_Analysis.py  6_Model_Info.py
models/: baseline_gradient_boosting.joblib  baseline_logreg.joblib  baseline_naive_bayes.joblib  baseline_svm.joblib
notebooks/: eda.ipynb
scripts/: kill_streamlit.ps1
src/: evaluate.py  explain.py  finbert_pretrained.py  lexicons.py  llm_enhanced.py  llm_explain.py  model.py  nlp_advanced.py  predict.py  preprocess.py  train.py  utils.py
tests/: conftest.py  test_llm_enhanced.py  test_nlp_advanced.py  test_predict.py  test_preprocess.py  test_utils.py
